Atualização imagens index

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMPETUS M.C.</title>
-    <link rel="icon" type="image/x-icon" href="/img/brasao.png">
+    <link rel="icon" type="image/x-icon" href="img/brasao.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,9 +13,9 @@
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <img style="width: 300px; padding-top: 1rem;" id="banner" src="/img/lema.jpg" alt="Lema Impetus MC">
+    <img style="width: 300px; padding-top: 1rem;" id="banner" src="img/lema.jpg" alt="Lema Impetus MC">
     <header>
-        <img id="brasao" src="/img/brasao.png" alt="">
+        <img id="brasao" src="img/brasao.png" alt="">
         <div id="titulo">
             <h1 style="font-size: 2.2rem;">EM CONSTRUÇÃO</h1>
             <h2 style="font-size: 1.5rem; margin-top: -0.7rem;">IMPETUS AD MORTEM</h2>
@@ -25,7 +25,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         <h1 style="background-color: #1f1f1f; text-align: center; padding: 1rem;"><i class="fa-brands fa-whatsapp"></i> CONTATOS</h1>
         <section id="contatos">
             <div class="estado">
-                <img src="/img/paraiba.png" alt="Bandeira da Paraíba">
+                <img src="img/paraiba.png" alt="Bandeira da Paraíba">
                 <h2>PARAÍBA</h2>
             </div>
             <section class="divisoes">
@@ -36,7 +36,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
                 <a class="cidade" href="https://api.whatsapp.com/send?phone=5583991258122"><h3>CAMPINA GRANDE</h3></a>
             </section>
             <div class="estado">
-                <img src="/img/pernambuco.png" alt="Bandeira de Pernambuco">
+                <img src="img/pernambuco.png" alt="Bandeira de Pernambuco">
                 <h2>PERNAMBUCO</h2>
             </div>
             <section class="divisoes">
@@ -44,7 +44,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
                 <a class="cidade" href="https://api.whatsapp.com/send?phone=5587981291720"><h3>GARANHUNS</h3></a>
             </section>
             <div class="estado">
-                <img src="/img/sergipe.png" alt="Bandeira de Sergipe">
+                <img src="img/sergipe.png" alt="Bandeira de Sergipe">
                 <h2>SERGIPE</h2>
             </div>
             <section class="divisoes">
