--- a/site/index.html
+++ b/site/index.html
@@ -50,11 +50,14 @@
             </li>
           </ul>
           <ul id="nav_menu">
-            <img
-              id="brasao_nav"
-              src="/img/brasao.png"
-              alt="Brasão Impetus MC"
-            />
+            <a href="">
+              <img
+                id="brasao_nav"
+                src="/img/brasao.png"
+                alt="Brasão Impetus MC"
+              />
+            </a>
+
             <div id="itens_menu">
               <li><a class="item_menu" href="#sobre">IMPETUS</a></li>
               <li><a class="item_menu" href="#historia">HISTÓRIA</a></li>
@@ -70,6 +73,162 @@
     <main>
       <section id="topo">
         <img src="img/brasao.png" alt="Brasão Impetus" />
+      </section>
+      <section id="sobre">
+        <div class="titulo_subtitulo">
+          <h1 class="titulo">O IMPETUS</h1>
+          <div class="subtitulo">
+            <p class="subtitulo_deco">x x x x x</p>
+            <h2>MOTO CLUBE X TRADIÇÃO</h2>
+          </div>
+        </div>
+        <div class="texto">
+          <p>
+            O Impetus Moto Clube é uma fraternidade de amantes de motocicletas,
+            motociclismo e seu estilo de vida.
+          </p>
+          <p>
+            Baseado nos cinco pilares do motoclubismo tradicional, tendo como
+            ênfase três desses pilares que são IGUALDADE, FRATERNIDADE E
+            LEALDADE.
+          </p>
+          <p>
+            Prezamos pela HIERARQUIA e DISCIPLINA, normas que são necessárias
+            para o bom convívio em nossa irmandade.
+          </p>
+        </div>
+      </section>
+      <section id="galeria">
+        <ul id="imagens_galeria">
+          <li>
+            <img
+              class="img_galeria"
+              src="/img/galeria/galeria.jpg"
+              alt="Imagem da Galeria"
+            />
+          </li>
+          <li>
+            <img
+              class="img_galeria"
+              src="/img/galeria/galeria.jpg"
+              alt="Imagem da Galeria"
+            />
+          </li>
+          <li>
+            <img
+              class="img_galeria"
+              src="/img/galeria/galeria.jpg"
+              alt="Imagem da Galeria"
+            />
+          </li>
+          <li>
+            <img
+              class="img_galeria"
+              src="/img/galeria/galeria.jpg"
+              alt="Imagem da Galeria"
+            />
+          </li>
+        </ul>
+        <h3 id="botao_galeria">
+          <a href="https://www.instagram.com/impetusmc/"
+            ><i class="fa-brands fa-instagram"></i> Galeria Completa</a
+          >
+        </h3>
+      </section>
+      <section id="historia">
+        <div>
+          <div class="titulo_subtitulo">
+            <h1 class="titulo">HISTÓRIA</h1>
+            <div class="subtitulo">
+              <p class="subtitulo_deco">x x x x x</p>
+              <h2>DO IMPETUS</h2>
+            </div>
+          </div>
+          <div class="texto">
+            <p>
+              No dia 23 de Janeiro de 2021, os 45 fundadores, se reuniram na
+              cidade de Garanhuns-PE para dialogar sobre uma fraternidade justa,
+              onde a igualdade, a irmandade e a lealdade fossem de fato
+              cumpridas acima de tudo. Uma instituição sem membros vaidosos, com
+              um estatuto que fosse soberano, seguido por todos independente de
+              patente ou tempo de clube, e que além disso, respeitasse as
+              condutas de boa convivência em sociedade.
+            </p>
+            <p>
+              Nesse dia 23, decidimos que a nossa irmandade precisava cumprir
+              esses princípios e que só poderíamos continuar juntos se isso
+              acontecesse imediatamente.
+            </p>
+            <p>
+              No dia 28 seguinte, o IMPETUS MC foi fundado em cima de todos
+              esses propósitos. Pregando principalmente a IGUALDADE, A
+              FRATERNIDADE E A LEALDADE.
+            </p>
+          </div>
+        </div>
+        <img src="/img/historia.png" alt="Logo Vinte e  Três" />
+      </section>
+      <section id="divisao">
+        <div class="titulo_subtitulo">
+          <h1 class="titulo">DIVISÃO</h1>
+          <div class="subtitulo">
+            <p class="subtitulo_deco">x x x x x</p>
+            <h2>E MATRIZ</h2>
+          </div>
+        </div>
+        <div id="mapa_divisoes">
+          <img id="mapa" src="/img/mapa.png" alt="Mapa" />
+          <ul id="matriz_divisao">
+            <h1>MATRIZ</h1>
+            <li>
+              <img
+                class="bandeira"
+                src="/img/bandeiras/brasil.png"
+                alt="bandeira do Brasil"
+              />
+              <div class="divisao_cidades">
+                <h2>João Pessoa</h2>
+                <h3>Paraíba - Brasil</h3>
+              </div>
+            </li>
+            <h1>DIVISÃO</h1>
+            <li>
+              <img
+                class="bandeira"
+                src="/img/bandeiras/paraiba.png"
+                alt="bandeira da Paraíba"
+              />
+              <div class="divisao_cidades">
+                <h2>PARAÍBA</h2>
+                <h3>Divisão - Campina Grande - PB</h3>
+                <h3>Divisão - Solânea - PB</h3>
+              </div>
+            </li>
+            <li>
+              <img
+                class="bandeira"
+                src="/img/bandeiras/pernambuco.png"
+                alt="bandeira de Pernambuco"
+              />
+              <div class="divisao_cidades">
+                <h2>PERNAMBUCO</h2>
+                <h3>Divisão - Garanhuns - PE</h3>
+                <h3>Divisão - Olinda - PE</h3>
+              </div>
+            </li>
+            <li>
+              <img
+                class="bandeira"
+                src="/img/bandeiras/sergipe.png"
+                alt="bandeira de Sergipe"
+              />
+              <div class="divisao_cidades">
+                <h2>SERGIPE</h2>
+                <h3>Divisão - Aracajú - SE</h3>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer></footer>
