--- a/site/index.html
+++ b/site/index.html
@@ -164,94 +164,61 @@
               esses propósitos. Pregando principalmente a IGUALDADE, A
               FRATERNIDADE E A LEALDADE.
             </p>
+            <div>
+              <button onclick="exibirHistoria(0)" class="btn_historia">
+                <div>
+                  <p>x</p>
+                  <h3>IDEOLOGIA</h3>
+                </div>
+                <p><i class="fa-solid fa-caret-down"></i></p>
+              </button>
+              <div id="ideologia" style="display: none">
+                <p>
+                  Pregamos a democracia a cima de tudo, a igualdade e LEALDADE A
+                  NOSSA IRMANDADE. Portanto, dispensamos curiosos atrás de
+                  hobbies!
+                </p>
+                <p>
+                  Nós levamos o Moto Clube como um estilo de vida, onde todos
+                  fazem questão de estar juntos sempre que possível.
+                </p>
+                <p>
+                  Somos uma família e nos doamos por ela, viva pela família ou
+                  suma!
+                </p>
+                <p>IMPETUS AD MORTEM</p>
+              </div>
+              <button onclick="exibirHistoria(1)" class="btn_historia">
+                <div>
+                  <p>x</p>
+                  <h3>MISSÃO</h3>
+                </div>
+                <p><i class="fa-solid fa-caret-down"></i></p>
+              </button>
+              <div id="missao" style="display: none">
+                <p>
+                  Antes de qualquer coisa: O auxílio e irmandade entre irmãos
+                  dentro do IMPETUS!
+                </p>
+                <p>
+                  Em todos os sentidos, somos uma família e nos apoiamos em
+                  qualquer situação, seja emocionalmente e até financeiramente.
+                  Sempre prezando pela vida e bem estar dos nossos integrantes.
+                </p>
+                <p>
+                  Fora do Moto Clube, tentamos levar o bem para quem mais
+                  precisa, através de ações e projetos sociais, sempre que é
+                  possível. Propagando o que o motoclubismo tem de melhor para a
+                  sociedade.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-        <img src="/img/historia.png" alt="Logo Vinte e  Três" />
-      </section>
-      <section id="divisao">
-        <div class="titulo_subtitulo">
-          <h1 class="titulo">DIVISÃO</h1>
-          <div class="subtitulo">
-            <p class="subtitulo_deco">x x x x x</p>
-            <h2>E MATRIZ</h2>
-          </div>
-        </div>
-        <div id="mapa_divisoes">
-          <img id="mapa" src="/img/mapa.png" alt="Mapa" />
-          <ul id="matriz_divisao">
-            <h1>MATRIZ</h1>
-            <li>
-              <img
-                class="bandeira"
-                src="/img/bandeiras/brasil.png"
-                alt="bandeira do Brasil"
-              />
-              <div class="divisao_cidades">
-                <h2>João Pessoa</h2>
-                <h3>Paraíba - Brasil</h3>
-              </div>
-            </li>
-            <h1>DIVISÃO</h1>
-            <li>
-              <img
-                class="bandeira"
-                src="/img/bandeiras/paraiba.png"
-                alt="bandeira da Paraíba"
-              />
-              <div class="divisao_cidades">
-                <h2>PARAÍBA</h2>
-                <h3>Divisão - Campina Grande - PB</h3>
-                <h3>Divisão - Solânea - PB</h3>
-              </div>
-            </li>
-            <li>
-              <img
-                class="bandeira"
-                src="/img/bandeiras/pernambuco.png"
-                alt="bandeira de Pernambuco"
-              />
-              <div class="divisao_cidades">
-                <h2>PERNAMBUCO</h2>
-                <h3>Divisão - Garanhuns - PE</h3>
-                <h3>Divisão - Olinda - PE</h3>
-              </div>
-            </li>
-            <li>
-              <img
-                class="bandeira"
-                src="/img/bandeiras/sergipe.png"
-                alt="bandeira de Sergipe"
-              />
-              <div class="divisao_cidades">
-                <h2>SERGIPE</h2>
-                <h3>Divisão - Aracajú - SE</h3>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <img src="img/historia.png" alt="Logo Vinte e  Três" />
       </section>
     </main>
     <footer></footer>
-    <script>
-      window.onscroll = function () {
-        stickyNavbar();
-      };
-
-      var brasao = document.getElementById("brasao_nav");
-      var navbar = document.getElementById("nav_menu");
-      var sticky = navbar.offsetTop;
-
-      function stickyNavbar() {
-        if (screen.width > 480) {
-          if (window.pageYOffset >= sticky) {
-            navbar.classList.add("sticky");
-            brasao.style.display = "block";
-          } else {
-            navbar.classList.remove("sticky");
-            brasao.style.display = "none";
-          }
-        }
-      }
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
