--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,7 @@
             <a href="">
               <img
                 id="brasao_nav"
-                src="/img/brasao.png"
+                src="img/brasao.png"
                 alt="Brasão Impetus MC"
               />
             </a>
