--- a/site/index.html
+++ b/site/index.html
@@ -103,28 +103,28 @@
           <li>
             <img
               class="img_galeria"
-              src="/img/galeria/galeria.jpg"
+              src="img/galeria/galeria.jpg"
               alt="Imagem da Galeria"
             />
           </li>
           <li>
             <img
               class="img_galeria"
-              src="/img/galeria/galeria.jpg"
+              src="img/galeria/galeria.jpg"
               alt="Imagem da Galeria"
             />
           </li>
           <li>
             <img
               class="img_galeria"
-              src="/img/galeria/galeria.jpg"
+              src="img/galeria/galeria.jpg"
               alt="Imagem da Galeria"
             />
           </li>
           <li>
             <img
               class="img_galeria"
-              src="/img/galeria/galeria.jpg"
+              src="img/galeria/galeria.jpg"
               alt="Imagem da Galeria"
             />
           </li>
