Ajustes de responsividade

--- a/site/index.html
+++ b/site/index.html
@@ -25,29 +25,37 @@
         </a>
         <div id="navbar_itens">
           <ul id="nav_contador">
-            <li>
-              <h1>HOJE<br />NÓS<br />SOMOS</h1>
-            </li>
-            <div class="linha-vertical"></div>
-            <li>
-              <h2 class="contador_titulo">MEMBROS</h2>
-              <h2 class="contador_valor">63</h2>
-            </li>
-            <div class="linha-vertical"></div>
-            <li>
-              <h2 class="contador_titulo">DIVISÕES</h2>
-              <h2 class="contador_valor">06</h2>
-            </li>
-            <div class="linha-vertical"></div>
-            <li>
-              <h2 class="contador_titulo">ESTADOS</h2>
-              <h2 class="contador_valor">04</h2>
-            </li>
-            <div class="linha-vertical"></div>
-            <li>
-              <h2 class="contador_titulo">PAÍSES</h2>
-              <h2 class="contador_valor">02</h2>
-            </li>
+            <div>
+              <li>
+                <h1 id="hoje">
+                  <p>HOJE</p>
+                  <p>NÓS</p>
+                  <p>SOMOS</p>
+                </h1>
+              </li>
+            </div>
+            <div style="display: flex">
+              <div class="linha-vertical"></div>
+              <li>
+                <h2 class="contador_titulo">MEMBROS</h2>
+                <h2 class="contador_valor">63</h2>
+              </li>
+              <div class="linha-vertical"></div>
+              <li>
+                <h2 class="contador_titulo">DIVISÕES</h2>
+                <h2 class="contador_valor">06</h2>
+              </li>
+              <div class="linha-vertical"></div>
+              <li>
+                <h2 class="contador_titulo">ESTADOS</h2>
+                <h2 class="contador_valor">04</h2>
+              </li>
+              <div class="linha-vertical"></div>
+              <li>
+                <h2 class="contador_titulo">PAÍSES</h2>
+                <h2 class="contador_valor">02</h2>
+              </li>
+            </div>
           </ul>
           <ul id="nav_menu">
             <a href="">
@@ -59,12 +67,16 @@
             </a>
 
             <div id="itens_menu">
-              <li><a class="item_menu" href="#sobre">IMPETUS</a></li>
-              <li><a class="item_menu" href="#historia">HISTÓRIA</a></li>
-              <li><a class="item_menu" href="#comando">COMANDO</a></li>
-              <li><a class="item_menu" href="#divisao">DIVISÕES</a></li>
-              <li><a class="item_menu" href="#galeria">GALERIA</a></li>
-              <li><a class="item_menu" href="#contato">CONTATO</a></li>
+              <div style="display: flex">
+                <li><a class="item_menu" href="#sobre">IMPETUS</a></li>
+                <li><a class="item_menu" href="#historia">HISTÓRIA</a></li>
+                <li><a class="item_menu" href="#comando">COMANDO</a></li>
+              </div>
+              <div style="display: flex">
+                <li><a class="item_menu" href="#divisao">DIVISÕES</a></li>
+                <li><a class="item_menu" href="#galeria">GALERIA</a></li>
+                <li><a class="item_menu" href="#contato">CONTATO</a></li>
+              </div>
             </div>
           </ul>
         </div>
