--- a/site/index.html
+++ b/site/index.html
@@ -98,7 +98,7 @@
         </a>
 
         <li id="brasao_nav">
-          <a onclick="funcaoTopo()" style="background-color: transparent">
+          <a href="" style="background-color: transparent">
             <img src="img/brasao.png" alt="Brasão Impetus MC" />
           </a>
           <button onclick="clickHamburger()" id="hamburger">
