Organização HTML galeria

--- a/site/index.html
+++ b/site/index.html
@@ -135,12 +135,13 @@
         </p>
       </div>
     </section>
-    <ul id="galeria">
-      <li id="galeria1"></li>
-      <li id="galeria2"></li>
-      <li id="galeria3"></li>
-      <li id="galeria4"></li>
-      <li id="galeria5"></li>
+    <section id="galeria">
+      <ul id="imgs_galeria">
+      <li id="img1_galeria"></li>
+      <li id="img2_galeria"></li>
+      <li id="img3_galeria"></li>
+      <li id="img4_galeria"></li>
+      <li id="img5_galeria"></li>
 
     </ul>
     <div id="preCarregamento"></div>
@@ -153,6 +154,8 @@
           rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> impetusmc</a>
       </li>
     </ul>
+    </section>
+    
     <!-- <section id="historia">
         <div>
           <div class="titulo_subtitulo">
