--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,7 @@
       </a>
       <div id="navbar_itens">
         <ul id="nav_contador">
-          <div>
+          <ul>
             <li>
               <h1 id="hoje">
                 <p>HOJE</p>
@@ -30,29 +30,24 @@
                 <p>SOMOS</p>
               </h1>
             </li>
-          </div>
-          <div style="display: flex">
+          </ul>
+          <ul style="display: flex">
             <div class="primeira linha-vertical"></div>
             <li>
-              <h2 class="contador_titulo">MEMBROS</h2>
-              <h2 class="contador_valor">63</h2>
-            </li>
-            <div class="linha-vertical"></div>
-            <li>
-              <h2 class="contador_titulo">DIVISÕES</h2>
+              <h2 class="contador_titulo"><i class="fa-solid fa-location-dot"></i> DIVISÕES</h2>
               <h2 class="contador_valor">06</h2>
             </li>
             <div class="linha-vertical"></div>
             <li>
-              <h2 class="contador_titulo">ESTADOS</h2>
+              <h2 class="contador_titulo"><i class="fa-solid fa-map-location-dot"></i> ESTADOS</h2>
               <h2 class="contador_valor">04</h2>
             </li>
             <div class="linha-vertical"></div>
             <li>
-              <h2 class="contador_titulo">PAÍSES</h2>
+              <h2 class="contador_titulo"><i class="fa-solid fa-globe"></i> PAÍSES</h2>
               <h2 class="contador_valor">02</h2>
             </li>
-          </div>
+          </ul>
         </ul>
         <ul id="nav_menu">
           <div id="itens_menu">
@@ -91,7 +86,6 @@
           <i class="fa-solid fa-bars"></i>
         </button>
       </li>
-
 
       <a class="opcao_navfixo" onclick="fechaHamburger()" href="#divisao">
         <li>DIVISÕES</li>
